// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Basic/Button Colors 1`] = `
<div
  class="p-4"
>
  <div>
    <button
      class="button button--primary"
      type="button"
    >
      <!---->
       Button 
      <!---->
    </button>
     
    <button
      class="button button--secondary"
      type="button"
    >
      <!---->
       Button 
      <!---->
    </button>
     
    <hr />
     
    <button
      class="button button--primary button--color-secondary"
      type="button"
    >
      <!---->
       Button 
      <!---->
    </button>
     
    <button
      class="button button--secondary button--color-secondary"
      type="button"
    >
      <!---->
       Button 
      <!---->
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Button Disabled 1`] = `
<div
  class="p-4"
>
  <button
    class="button button--primary"
    disabled="disabled"
    type="button"
  >
    <!---->
     Can't touch this 
    <!---->
  </button>
</div>
`;

exports[`Storyshots Components|Basic/Button Icon 1`] = `
<div
  class="p-4"
>
  <div>
    <button
      class="button button--primary button--icon-only"
      type="button"
    >
      <!---->
       
      <!---->
       
      <i
        class="icon-remove"
      />
    </button>
    <hr />
     
    <button
      class="button button--primary"
      type="button"
    >
      <!---->
       With an icon 
      <i
        class="icon-arrow-right"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Button Inverted 1`] = `
<div
  class="p-4"
>
  <div
    class="p-3 bg-primary"
  >
    <button
      class="button button--primary button--inverted"
      type="button"
    >
      <!---->
       Button 
      <!---->
    </button>
     
    <button
      class="button button--secondary button--inverted"
      type="button"
    >
      <!---->
       Button 
      <!---->
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Button Roles 1`] = `
<div
  class="p-4"
>
  <div>
    <button
      class="button button--primary"
      type="button"
    >
      <!---->
       Primary 
      <!---->
    </button>
    <hr />
     
    <button
      class="button button--secondary"
      type="button"
    >
      <!---->
       Secondary 
      <!---->
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Button Sizes 1`] = `
<div
  class="p-4"
>
  <div>
    <button
      class="button button--large"
      type="button"
    >
      <!---->
       Large 
      <!---->
    </button>
    <hr />
     
    <button
      class="button button--primary"
      type="button"
    >
      <!---->
       Regular 
      <!---->
    </button>
    <hr />
     
    <button
      class="button button--small"
      type="button"
    >
      <!---->
       Small 
      <!---->
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Button Tryout 1`] = `
<div
  class="p-4"
>
  <div
    class=""
  >
    <button
      class="button button--primary button--color-primary"
      type="button"
    >
      <!---->
       Hello Storybook 
      <i
        class="icon-arrow-down"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Button Variants 1`] = `
<div
  class="p-4"
>
  <div>
    <button
      class="button button--primary button--basic"
      type="button"
    >
      <!---->
       Primary basic 
      <!---->
    </button>
    <hr />
     
    <button
      class="button button--secondary button--basic"
      type="button"
    >
      <!---->
       Secondary basic 
      <!---->
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Button Wide 1`] = `
<div
  class="p-4"
>
  <button
    class="button button--primary button--wide"
    type="button"
  >
    <!---->
     Wide button 
    <!---->
  </button>
</div>
`;

exports[`Storyshots Components|Basic/Label Basic 1`] = `
<div
  class="p-4"
>
  <span
    class="label"
  >
    
  Basic

  
    <!---->
  </span>
</div>
`;

exports[`Storyshots Components|Basic/Label Colors 1`] = `
<div
  class="p-4"
>
  <div>
    <span
      class="label"
    >
      
  Basic

  
      <!---->
    </span>
     
    <hr />
     
    <span
      class="label label--primary"
    >
      
  Primary

  
      <!---->
    </span>
     
    <span
      class="label label--secondary"
    >
      
  Secondary

  
      <!---->
    </span>
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Label Dismissible 1`] = `
<div
  class="p-4"
>
  <span
    class="label label--dismiss"
  >
    
  Dismissible

  
    <i
      class="icon-x"
    />
  </span>
</div>
`;

exports[`Storyshots Components|Basic/Label Size 1`] = `
<div
  class="p-4"
>
  <div>
    <span
      class="label label--small"
    >
      
  Small

  
      <!---->
    </span>
     
    <span
      class="label label--primary label--small"
    >
      
  Small

  
      <!---->
    </span>
     
    <span
      class="label label--secondary label--small"
    >
      
  Small

  
      <!---->
    </span>
     
    <hr />
     
    <span
      class="label label--pill"
    >
      
  

  
      <!---->
    </span>
     
    <span
      class="label label--primary label--pill"
    >
      
  

  
      <!---->
    </span>
     
    <span
      class="label label--secondary label--pill"
    >
      
  

  
      <!---->
    </span>
     
    <hr />
     
    <span
      class="label label--dot"
    >
      
  

  
      <!---->
    </span>
     
    <span
      class="label label--primary label--dot"
    >
      
  

  
      <!---->
    </span>
     
    <span
      class="label label--secondary label--dot"
    >
      
  

  
      <!---->
    </span>
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Label Tryout 1`] = `
<div
  class="p-4"
>
  <span
    class="label label--secondary label--small"
  >
    
  Hello Storybook

  
    <i
      class="icon-plus"
    />
  </span>
</div>
`;

exports[`Storyshots Components|Basic/Label With an icon 1`] = `
<div
  class="p-4"
>
  <div>
    <span
      class="label"
    >
      
  More

  
      <i
        class="icon-more"
      />
    </span>
     
    <hr />
     
    <span
      class="label label--primary"
    >
      
  Add

  
      <i
        class="icon-plus"
      />
    </span>
     
    <span
      class="label label--secondary"
    >
      
  Secondary

  
      <i
        class="icon-arrow-skip"
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Components|Basic/List Divide style 1`] = `
<div
  class="p-4"
>
  <ul
    class="list list--large list--divide"
  >
    <li
      class="list__item"
    >
      <div
        class=""
      >
        <h3>
          First item
        </h3>
         
        <p>
          Description of the first item
        </p>
      </div>
       
      <div
        class="list__action"
      >
        <button
          class="button button--small"
          type="button"
        >
          <!---->
           Action 
          <!---->
        </button>
      </div>
    </li>
     
    <li
      class="list__item"
    >
      <div
        class=""
      >
        <h3>
          Second item
        </h3>
         
        <p>
          Description of the second item
        </p>
      </div>
       
      <div
        class="list__action"
      >
        <button
          class="button button--small"
          type="button"
        >
          <!---->
           Action 
          <!---->
        </button>
      </div>
    </li>
     
    <li
      class="list__item"
    >
      <div
        class=""
      >
        <h3>
          Third item
        </h3>
         
        <p>
          Description of the third item
        </p>
      </div>
       
      <div
        class="list__action"
      >
        <button
          class="button button--small"
          type="button"
        >
          <!---->
           Action 
          <!---->
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components|Basic/List Hover style 1`] = `
<div
  class="p-4"
>
  <ul
    class="list list--large list--hover"
  >
    <li
      class="list__item"
    >
      <div
        class=""
      >
        <h3>
          First item
        </h3>
         
        <p>
          Description of the first item
        </p>
      </div>
       
      <div
        class="list__action"
      >
        <button
          class="button button--small"
          type="button"
        >
          <!---->
           Action 
          <!---->
        </button>
      </div>
    </li>
     
    <li
      class="list__item"
    >
      <div
        class=""
      >
        <h3>
          Second item
        </h3>
         
        <p>
          Description of the second item
        </p>
      </div>
       
      <div
        class="list__action"
      >
        <button
          class="button button--small"
          type="button"
        >
          <!---->
           Action 
          <!---->
        </button>
      </div>
    </li>
     
    <li
      class="list__item"
    >
      <div
        class=""
      >
        <h3>
          Third item
        </h3>
         
        <p>
          Description of the third item
        </p>
      </div>
       
      <div
        class="list__action"
      >
        <button
          class="button button--small"
          type="button"
        >
          <!---->
           Action 
          <!---->
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components|Basic/List Large 1`] = `
<div
  class="p-4"
>
  <ul
    class="list list--large"
  >
    <li
      class="list__item"
    >
      <div
        class=""
      >
        <h3>
          First item
        </h3>
         
        <p>
          Description of the first item
        </p>
      </div>
       
      <div
        class="list__action"
      >
        <button
          class="button button--small"
          type="button"
        >
          <!---->
           Action 
          <!---->
        </button>
      </div>
    </li>
     
    <li
      class="list__item"
    >
      <div
        class=""
      >
        <h3>
          Second item
        </h3>
         
        <p>
          Description of the second item
        </p>
      </div>
       
      <div
        class="list__action"
      >
        <button
          class="button button--small"
          type="button"
        >
          <!---->
           Action 
          <!---->
        </button>
      </div>
    </li>
     
    <li
      class="list__item"
    >
      <div
        class=""
      >
        <h3>
          Third item
        </h3>
         
        <p>
          Description of the third item
        </p>
      </div>
       
      <div
        class="list__action"
      >
        <button
          class="button button--small"
          type="button"
        >
          <!---->
           Action 
          <!---->
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components|Basic/List Medium 1`] = `
<div
  class="p-4"
>
  <ul
    class="list list--medium"
  >
    <li
      class="list__item"
    >
      <div
        class=""
      >
        <h3>
          First item
        </h3>
         
        <p>
          Description of the first item
        </p>
      </div>
       
      <div
        class="list__action"
      >
        <button
          class="button button--small"
          type="button"
        >
          <!---->
           Action 
          <!---->
        </button>
      </div>
    </li>
     
    <li
      class="list__item"
    >
      <div
        class=""
      >
        <h3>
          Second item
        </h3>
         
        <p>
          Description of the second item
        </p>
      </div>
       
      <div
        class="list__action"
      >
        <button
          class="button button--small"
          type="button"
        >
          <!---->
           Action 
          <!---->
        </button>
      </div>
    </li>
     
    <li
      class="list__item"
    >
      <div
        class=""
      >
        <h3>
          Third item
        </h3>
         
        <p>
          Description of the third item
        </p>
      </div>
       
      <div
        class="list__action"
      >
        <button
          class="button button--small"
          type="button"
        >
          <!---->
           Action 
          <!---->
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components|Basic/List Pointer style 1`] = `
<div
  class="p-4"
>
  <ul
    class="list list--large list--hover"
  >
    <li
      class="list__item"
    >
      <div
        class=""
      >
        <h3>
          First item
        </h3>
         
        <p>
          Description of the first item
        </p>
      </div>
       
      <div
        class="list__action"
      >
        <button
          class="button button--small"
          type="button"
        >
          <!---->
           Action 
          <!---->
        </button>
      </div>
    </li>
     
    <li
      class="list__item"
    >
      <div
        class=""
      >
        <h3>
          Second item
        </h3>
         
        <p>
          Description of the second item
        </p>
      </div>
       
      <div
        class="list__action"
      >
        <button
          class="button button--small"
          type="button"
        >
          <!---->
           Action 
          <!---->
        </button>
      </div>
    </li>
     
    <li
      class="list__item"
    >
      <div
        class=""
      >
        <h3>
          Third item
        </h3>
         
        <p>
          Description of the third item
        </p>
      </div>
       
      <div
        class="list__action"
      >
        <button
          class="button button--small"
          type="button"
        >
          <!---->
           Action 
          <!---->
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components|Basic/List Small 1`] = `
<div
  class="p-4"
>
  <ul
    class="list list--small"
  >
    <li
      class="list__item"
    >
      <div
        class=""
      >
        <h3>
          First item
        </h3>
         
        <p>
          Description of the first item
        </p>
      </div>
       
      <div
        class="list__action"
      >
        <button
          class="button button--small"
          type="button"
        >
          <!---->
           Action 
          <!---->
        </button>
      </div>
    </li>
     
    <li
      class="list__item"
    >
      <div
        class=""
      >
        <h3>
          Second item
        </h3>
         
        <p>
          Description of the second item
        </p>
      </div>
       
      <div
        class="list__action"
      >
        <button
          class="button button--small"
          type="button"
        >
          <!---->
           Action 
          <!---->
        </button>
      </div>
    </li>
     
    <li
      class="list__item"
    >
      <div
        class=""
      >
        <h3>
          Third item
        </h3>
         
        <p>
          Description of the third item
        </p>
      </div>
       
      <div
        class="list__action"
      >
        <button
          class="button button--small"
          type="button"
        >
          <!---->
           Action 
          <!---->
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components|Basic/List Tryout 1`] = `
<div
  class="p-4"
>
  <ul
    class="list list--large"
  >
    <li
      class="list__item"
    >
      <div
        class=""
      >
        <h3>
          First item
        </h3>
         
        <p>
          Description of the first item
        </p>
      </div>
       
      <div
        class="list__action"
      >
        <button
          class="button button--small"
          type="button"
        >
          <!---->
           Action 
          <!---->
        </button>
      </div>
    </li>
     
    <li
      class="list__item"
    >
      <div
        class=""
      >
        <h3>
          Second item
        </h3>
         
        <p>
          Description of the second item
        </p>
      </div>
       
      <div
        class="list__action"
      >
        <button
          class="button button--small"
          type="button"
        >
          <!---->
           Action 
          <!---->
        </button>
      </div>
    </li>
     
    <li
      class="list__item"
    >
      <div
        class=""
      >
        <h3>
          Third item
        </h3>
         
        <p>
          Description of the third item
        </p>
      </div>
       
      <div
        class="list__action"
      >
        <button
          class="button button--small"
          type="button"
        >
          <!---->
           Action 
          <!---->
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components|Basic/Navigation Align Center 1`] = `
<div
  class="p-4"
>
  <div>
    <nav
      class="nav nav--center"
    >
      <ul>
        <li>
          <a
            class="router-link-exact-active router-link-active"
            href="#/"
          >
            <!---->
             Navigation
          </a>
        </li>
         
        <li>
          <a
            class=""
            href="#/breadcrumbs"
          >
            <!---->
             Breadcrumbs
          </a>
        </li>
         
        <li>
          <a
            class=""
            href="#/message"
          >
            <!---->
             Message
          </a>
        </li>
         
        <li>
          <a
            class=""
            href="#/empty-state"
          >
            <!---->
             Empty State
          </a>
        </li>
      </ul>
    </nav>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Navigation Align Right 1`] = `
<div
  class="p-4"
>
  <div>
    <nav
      class="nav nav--right"
    >
      <ul>
        <li>
          <a
            class="router-link-exact-active router-link-active"
            href="#/"
          >
            <!---->
             Navigation
          </a>
        </li>
         
        <li>
          <a
            class=""
            href="#/breadcrumbs"
          >
            <!---->
             Breadcrumbs
          </a>
        </li>
         
        <li>
          <a
            class=""
            href="#/message"
          >
            <!---->
             Message
          </a>
        </li>
         
        <li>
          <a
            class=""
            href="#/empty-state"
          >
            <!---->
             Empty State
          </a>
        </li>
      </ul>
    </nav>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Navigation Basic 1`] = `
<div
  class="p-4"
>
  <div>
    <nav
      class="nav nav--left"
    >
      <ul>
        <li>
          <a
            class="router-link-exact-active router-link-active"
            href="#/"
          >
            <!---->
             Navigation
          </a>
        </li>
         
        <li>
          <a
            class=""
            href="#/breadcrumbs"
          >
            <!---->
             Breadcrumbs
          </a>
        </li>
         
        <li>
          <a
            class=""
            href="#/message"
          >
            <!---->
             Message
          </a>
        </li>
         
        <li>
          <a
            class=""
            href="#/empty-state"
          >
            <!---->
             Empty State
          </a>
        </li>
      </ul>
    </nav>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Navigation Disabled item 1`] = `
<div
  class="p-4"
>
  <div>
    <nav
      class="nav nav--left"
    >
      <ul>
        <li>
          <a
            class="router-link-exact-active router-link-active"
            href="#/"
          >
            <!---->
             Navigation
          </a>
        </li>
         
        <li>
          <a
            class=""
            href="#/breadcrumbs"
          >
            <!---->
             Breadcrumbs
          </a>
        </li>
         
        <li>
          <a
            class=""
            href="#/message"
          >
            <!---->
             Message
          </a>
        </li>
         
        <li>
          <a
            class="is-disabled"
            href="#/empty-state"
          >
            <!---->
             Empty State
          </a>
        </li>
      </ul>
    </nav>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Navigation Toned in color 1`] = `
<div
  class="p-4"
>
  <div>
    <nav
      class="nav nav--color-secondary nav--left"
    >
      <ul>
        <li>
          <a
            class="router-link-exact-active router-link-active"
            href="#/"
          >
            <!---->
             Navigation
          </a>
        </li>
         
        <li>
          <a
            class=""
            href="#/breadcrumbs"
          >
            <!---->
             Breadcrumbs
          </a>
        </li>
         
        <li>
          <a
            class=""
            href="#/message"
          >
            <!---->
             Message
          </a>
        </li>
         
        <li>
          <a
            class=""
            href="#/empty-state"
          >
            <!---->
             Empty State
          </a>
        </li>
      </ul>
    </nav>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Navigation Tryout 1`] = `
<div
  class="p-4"
>
  <div>
    <nav
      class="nav nav--left"
    >
      <ul>
        <li>
          <a
            class="router-link-exact-active router-link-active"
            href="#/"
          >
            <span
              class="icon-integrations"
            />
             Navigation
          </a>
        </li>
         
        <li>
          <a
            class=""
            href="#/breadcrumbs"
          >
            <!---->
             Breadcrumbs
          </a>
        </li>
         
        <li>
          <a
            class=""
            href="#/message"
          >
            <!---->
             Message
          </a>
        </li>
         
        <li>
          <a
            class=""
            href="#/empty-state"
          >
            <!---->
             Empty State
          </a>
        </li>
      </ul>
    </nav>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots Components|Basic/Navigation With icons 1`] = `
<div
  class="p-4"
>
  <div>
    <nav
      class="nav nav--left"
    >
      <ul>
        <li>
          <a
            class="router-link-exact-active router-link-active"
            href="#/"
          >
            <span
              class="icon-integrations"
            />
             Navigation
          </a>
        </li>
         
        <li>
          <a
            class=""
            href="#/breadcrumbs"
          >
            <span
              class="icon-theme"
            />
             Breadcrumbs
          </a>
        </li>
         
        <li>
          <a
            class=""
            href="#/message"
          >
            <span
              class="icon-rules"
            />
             Message
          </a>
        </li>
         
        <li>
          <a
            class=""
            href="#/empty-state"
          >
            <span
              class="icon-code"
            />
             Empty State
          </a>
        </li>
      </ul>
    </nav>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots Components|Custom/Avatar Basic 1`] = `
<div
  class="p-4"
>
  <div>
    <div
      class="avatar"
    >
      <svg
        viewBox="0 0 80 80"
        width="80px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m28.6091684 41.6452381c3.2812101 2.1225413 7.1921206 3.3547619 11.3908316 3.3547619s8.1096215-1.2322206 11.3908316-3.3547619c16.5421837 4.9053348 28.6091684 20.2208507 28.6091684 38.3547619 0 22.09139-17.90861 40-40 40s-40-17.90861-40-40c0-18.1339112 12.0669847-33.4494271 28.6091684-38.3547619zm11.3908316.3547619c-9.9411255 0-18-8.0588745-18-18s8.0588745-18 18-18 18 8.0588745 18 18-8.0588745 18-18 18z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
     
    <hr />
     
    <div
      class="avatar"
    >
      <img
        alt=""
        src="https://cdn.pixabay.com/photo/2020/04/15/17/32/medical-5047582_1280.png"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Custom/Avatar Colors 1`] = `
<div
  class="p-4"
>
  <div>
    <div
      class="avatar avatar--color-primary"
    >
      <svg
        viewBox="0 0 80 80"
        width="80px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m28.6091684 41.6452381c3.2812101 2.1225413 7.1921206 3.3547619 11.3908316 3.3547619s8.1096215-1.2322206 11.3908316-3.3547619c16.5421837 4.9053348 28.6091684 20.2208507 28.6091684 38.3547619 0 22.09139-17.90861 40-40 40s-40-17.90861-40-40c0-18.1339112 12.0669847-33.4494271 28.6091684-38.3547619zm11.3908316.3547619c-9.9411255 0-18-8.0588745-18-18s8.0588745-18 18-18 18 8.0588745 18 18-8.0588745 18-18 18z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
     
    <hr />
     
    <div
      class="avatar avatar--color-secondary"
    >
      <svg
        viewBox="0 0 80 80"
        width="80px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m28.6091684 41.6452381c3.2812101 2.1225413 7.1921206 3.3547619 11.3908316 3.3547619s8.1096215-1.2322206 11.3908316-3.3547619c16.5421837 4.9053348 28.6091684 20.2208507 28.6091684 38.3547619 0 22.09139-17.90861 40-40 40s-40-17.90861-40-40c0-18.1339112 12.0669847-33.4494271 28.6091684-38.3547619zm11.3908316.3547619c-9.9411255 0-18-8.0588745-18-18s8.0588745-18 18-18 18 8.0588745 18 18-8.0588745 18-18 18z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Custom/Avatar In circle 1`] = `
<div
  class="p-4"
>
  <div>
    <div
      class="avatar avatar--circle"
    >
      <svg
        viewBox="0 0 80 80"
        width="80px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m28.6091684 41.6452381c3.2812101 2.1225413 7.1921206 3.3547619 11.3908316 3.3547619s8.1096215-1.2322206 11.3908316-3.3547619c16.5421837 4.9053348 28.6091684 20.2208507 28.6091684 38.3547619 0 22.09139-17.90861 40-40 40s-40-17.90861-40-40c0-18.1339112 12.0669847-33.4494271 28.6091684-38.3547619zm11.3908316.3547619c-9.9411255 0-18-8.0588745-18-18s8.0588745-18 18-18 18 8.0588745 18 18-8.0588745 18-18 18z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
     
    <hr />
     
    <div
      class="avatar avatar--circle"
    >
      <img
        alt=""
        src="https://cdn.pixabay.com/photo/2020/04/15/17/32/medical-5047582_1280.png"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Custom/Avatar Sizes 1`] = `
<div
  class="p-4"
>
  <div>
    <div
      class="avatar avatar--size-small"
    >
      <svg
        viewBox="0 0 80 80"
        width="80px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m28.6091684 41.6452381c3.2812101 2.1225413 7.1921206 3.3547619 11.3908316 3.3547619s8.1096215-1.2322206 11.3908316-3.3547619c16.5421837 4.9053348 28.6091684 20.2208507 28.6091684 38.3547619 0 22.09139-17.90861 40-40 40s-40-17.90861-40-40c0-18.1339112 12.0669847-33.4494271 28.6091684-38.3547619zm11.3908316.3547619c-9.9411255 0-18-8.0588745-18-18s8.0588745-18 18-18 18 8.0588745 18 18-8.0588745 18-18 18z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
     
    <hr />
     
    <div
      class="avatar"
    >
      <svg
        viewBox="0 0 80 80"
        width="80px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m28.6091684 41.6452381c3.2812101 2.1225413 7.1921206 3.3547619 11.3908316 3.3547619s8.1096215-1.2322206 11.3908316-3.3547619c16.5421837 4.9053348 28.6091684 20.2208507 28.6091684 38.3547619 0 22.09139-17.90861 40-40 40s-40-17.90861-40-40c0-18.1339112 12.0669847-33.4494271 28.6091684-38.3547619zm11.3908316.3547619c-9.9411255 0-18-8.0588745-18-18s8.0588745-18 18-18 18 8.0588745 18 18-8.0588745 18-18 18z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
     
    <hr />
     
    <div
      class="avatar avatar--size-large"
    >
      <svg
        viewBox="0 0 80 80"
        width="80px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m28.6091684 41.6452381c3.2812101 2.1225413 7.1921206 3.3547619 11.3908316 3.3547619s8.1096215-1.2322206 11.3908316-3.3547619c16.5421837 4.9053348 28.6091684 20.2208507 28.6091684 38.3547619 0 22.09139-17.90861 40-40 40s-40-17.90861-40-40c0-18.1339112 12.0669847-33.4494271 28.6091684-38.3547619zm11.3908316.3547619c-9.9411255 0-18-8.0588745-18-18s8.0588745-18 18-18 18 8.0588745 18 18-8.0588745 18-18 18z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Custom/Avatar Tryout 1`] = `
<div
  class="p-4"
>
  <div>
    <div
      class="avatar avatar--color-primary"
    >
      <svg
        viewBox="0 0 80 80"
        width="80px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m28.6091684 41.6452381c3.2812101 2.1225413 7.1921206 3.3547619 11.3908316 3.3547619s8.1096215-1.2322206 11.3908316-3.3547619c16.5421837 4.9053348 28.6091684 20.2208507 28.6091684 38.3547619 0 22.09139-17.90861 40-40 40s-40-17.90861-40-40c0-18.1339112 12.0669847-33.4494271 28.6091684-38.3547619zm11.3908316.3547619c-9.9411255 0-18-8.0588745-18-18s8.0588745-18 18-18 18 8.0588745 18 18-8.0588745 18-18 18z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
     
    <hr />
     
    <div
      class="avatar"
    >
      <img
        alt=""
        src="https://cdn.pixabay.com/photo/2020/04/15/17/32/medical-5047582_1280.png"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Global|Colors List 1`] = `
<div
  class="p-4"
>
  <div>
    <div>
      <h2>
        Primary
      </h2>
       
      <ul
        class="docs__bg-color-list"
      >
        <li>
          <div
            class="docs__bg-color-item bg-primary-dark"
          />
           
          <p>
            
              Primary dark
            <br />
            
              primary-dark
            <br />
            
              #da7700
            
          </p>
        </li>
        <li>
          <div
            class="docs__bg-color-item bg-primary"
          />
           
          <p>
            
              Primary
            <br />
            
              primary
            <br />
            
              #ffa941
            
          </p>
        </li>
        <li>
          <div
            class="docs__bg-color-item bg-primary-light"
          />
           
          <p>
            
              Primary Light
            <br />
            
              primary-light
            <br />
            
              #ffd7a7
            
          </p>
        </li>
      </ul>
    </div>
    <div>
      <h2>
        Secondary
      </h2>
       
      <ul
        class="docs__bg-color-list"
      >
        <li>
          <div
            class="docs__bg-color-item bg-secondary-dark"
          />
           
          <p>
            
              Secondary dark
            <br />
            
              secondary-dark
            <br />
            
              #1113a1
            
          </p>
        </li>
        <li>
          <div
            class="docs__bg-color-item bg-secondary"
          />
           
          <p>
            
              Secondary
            <br />
            
              secondary
            <br />
            
              #4648d2
            
          </p>
        </li>
        <li>
          <div
            class="docs__bg-color-item bg-secondary-light"
          />
           
          <p>
            
              Secondary Light
            <br />
            
              secondary-light
            <br />
            
              #8b8df3
            
          </p>
        </li>
      </ul>
    </div>
    <div>
      <h2>
        Red
      </h2>
       
      <ul
        class="docs__bg-color-list"
      >
        <li>
          <div
            class="docs__bg-color-item bg-red-dark"
          />
           
          <p>
            
              Red dark
            <br />
            
              red-dark
            <br />
            
              #d1000d
            
          </p>
        </li>
        <li>
          <div
            class="docs__bg-color-item bg-red"
          />
           
          <p>
            
              Red
            <br />
            
              red
            <br />
            
              #fa3d49
            
          </p>
        </li>
        <li>
          <div
            class="docs__bg-color-item bg-red-light"
          />
           
          <p>
            
              Red Light
            <br />
            
              red-light
            <br />
            
              #ff9ea4
            
          </p>
        </li>
      </ul>
    </div>
    <div>
      <h2>
        Orange
      </h2>
       
      <ul
        class="docs__bg-color-list"
      >
        <li>
          <div
            class="docs__bg-color-item bg-orange-dark"
          />
           
          <p>
            
              Orange dark
            <br />
            
              orange-dark
            <br />
            
              #da7700
            
          </p>
        </li>
        <li>
          <div
            class="docs__bg-color-item bg-orange"
          />
           
          <p>
            
              Orange
            <br />
            
              orange
            <br />
            
              #ffa941
            
          </p>
        </li>
        <li>
          <div
            class="docs__bg-color-item bg-orange-light"
          />
           
          <p>
            
              Orange Light
            <br />
            
              orange-light
            <br />
            
              #ffd7a7
            
          </p>
        </li>
      </ul>
    </div>
    <div>
      <h2>
        Yellow
      </h2>
       
      <ul
        class="docs__bg-color-list"
      >
        <li>
          <div
            class="docs__bg-color-item bg-yellow-dark"
          />
           
          <p>
            
              Yellow dark
            <br />
            
              yellow-dark
            <br />
            
              #ccb100
            
          </p>
        </li>
        <li>
          <div
            class="docs__bg-color-item bg-yellow"
          />
           
          <p>
            
              Yellow
            <br />
            
              yellow
            <br />
            
              #ffe433
            
          </p>
        </li>
        <li>
          <div
            class="docs__bg-color-item bg-yellow-light"
          />
           
          <p>
            
              Yellow Light
            <br />
            
              yellow-light
            <br />
            
              #fff299
            
          </p>
        </li>
      </ul>
    </div>
    <div>
      <h2>
        Green
      </h2>
       
      <ul
        class="docs__bg-color-list"
      >
        <li>
          <div
            class="docs__bg-color-item bg-green-dark"
          />
           
          <p>
            
              Green dark
            <br />
            
              green-dark
            <br />
            
              #19902d
            
          </p>
        </li>
        <li>
          <div
            class="docs__bg-color-item bg-green"
          />
           
          <p>
            
              Green
            <br />
            
              green
            <br />
            
              #4bc45f
            
          </p>
        </li>
        <li>
          <div
            class="docs__bg-color-item bg-green-light"
          />
           
          <p>
            
              Green Light
            <br />
            
              green-light
            <br />
            
              #8aeb9a
            
          </p>
        </li>
      </ul>
    </div>
    <div>
      <h2>
        Indigo
      </h2>
       
      <ul
        class="docs__bg-color-list"
      >
        <li>
          <div
            class="docs__bg-color-item bg-indigo-dark"
          />
           
          <p>
            
              Indigo dark
            <br />
            
              indigo-dark
            <br />
            
              #005387
            
          </p>
        </li>
        <li>
          <div
            class="docs__bg-color-item bg-indigo"
          />
           
          <p>
            
              Indigo
            <br />
            
              indigo
            <br />
            
              #178cd6
            
          </p>
        </li>
        <li>
          <div
            class="docs__bg-color-item bg-indigo-light"
          />
           
          <p>
            
              Indigo Light
            <br />
            
              indigo-light
            <br />
            
              #54bdff
            
          </p>
        </li>
      </ul>
    </div>
    <div>
      <h2>
        Blue
      </h2>
       
      <ul
        class="docs__bg-color-list"
      >
        <li>
          <div
            class="docs__bg-color-item bg-blue-dark"
          />
           
          <p>
            
              Blue dark
            <br />
            
              blue-dark
            <br />
            
              #0000c0
            
          </p>
        </li>
        <li>
          <div
            class="docs__bg-color-item bg-blue"
          />
           
          <p>
            
              Blue
            <br />
            
              blue
            <br />
            
              #3333f3
            
          </p>
        </li>
        <li>
          <div
            class="docs__bg-color-item bg-blue-light"
          />
           
          <p>
            
              Blue Light
            <br />
            
              blue-light
            <br />
            
              #8d8dff
            
          </p>
        </li>
      </ul>
    </div>
    <div>
      <h2>
        Violet
      </h2>
       
      <ul
        class="docs__bg-color-list"
      >
        <li>
          <div
            class="docs__bg-color-item bg-violet-dark"
          />
           
          <p>
            
              Violet dark
            <br />
            
              violet-dark
            <br />
            
              #5800b1
            
          </p>
        </li>
        <li>
          <div
            class="docs__bg-color-item bg-violet"
          />
           
          <p>
            
              Violet
            <br />
            
              violet
            <br />
            
              #8b26f1
            
          </p>
        </li>
        <li>
          <div
            class="docs__bg-color-item bg-violet-light"
          />
           
          <p>
            
              Violet Light
            <br />
            
              violet-light
            <br />
            
              #be7eff
            
          </p>
        </li>
      </ul>
    </div>
    <div>
      <h2>
        Black
      </h2>
       
      <ul
        class="docs__bg-color-list"
      >
        <li>
          <div
            class="docs__bg-color-item bg-black"
          />
           
          <p>
            
              Black
            <br />
            
              black
            <br />
            
              #000
            
          </p>
        </li>
      </ul>
    </div>
    <div>
      <h2>
        Gray
      </h2>
       
      <ul
        class="docs__bg-color-list"
      >
        <li>
          <div
            class="docs__bg-color-item bg-gray-darkest"
          />
           
          <p>
            
              Gray darkest
            <br />
            
              gray-darkest
            <br />
            
              #333
            
          </p>
        </li>
        <li>
          <div
            class="docs__bg-color-item bg-gray-dark"
          />
           
          <p>
            
              Gray dark
            <br />
            
              gray-dark
            <br />
            
              #6b6b6b
            
          </p>
        </li>
        <li>
          <div
            class="docs__bg-color-item bg-gray"
          />
           
          <p>
            
              Gray
            <br />
            
              gray
            <br />
            
              #999
            
          </p>
        </li>
        <li>
          <div
            class="docs__bg-color-item bg-gray-light"
          />
           
          <p>
            
              Gray Light
            <br />
            
              gray-light
            <br />
            
              #ccc
            
          </p>
        </li>
        <li>
          <div
            class="docs__bg-color-item bg-gray-light"
          />
           
          <p>
            
              Gray Light
            <br />
            
              gray-light
            <br />
            
              #ebebeb
            
          </p>
        </li>
      </ul>
    </div>
    <div>
      <h2>
        White
      </h2>
       
      <ul
        class="docs__bg-color-list"
      >
        <li>
          <div
            class="docs__bg-color-item bg-white"
          />
           
          <p>
            
              White
            <br />
            
              white
            <br />
            
              #fff
            
          </p>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots Global|Colors Tryout 1`] = `
<div
  class="p-4"
>
  <div>
    <ul
      class="docs__bg-color-list"
    >
      <li>
        <div
          class="docs__bg-color-item bg-primary-light"
        />
         
        <p>
          
              primary-light
            
        </p>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Global|Icon Basic 1`] = `
<div
  class="p-4"
>
  <div>
    <span
      class="icon-arrow-down"
    />
     
    <span
      class="icon-arrow-left color-primary"
    />
     
    <span
      class="icon-arrow-right color-secondary"
    />
     
    <span
      class="icon-arrow-up color-secondary"
    />
  </div>
</div>
`;

exports[`Storyshots Global|Icon Symbols 1`] = `
<div
  class="p-4"
>
  <ul
    class="docs__simple-list"
  >
    <li
      class="docs__icons-list"
    >
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-arrow-down"
        />
         
        <span
          class="docs__icons-text"
        >
          arrow-down
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-arrow-left"
        />
         
        <span
          class="docs__icons-text"
        >
          arrow-left
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-arrow-right"
        />
         
        <span
          class="docs__icons-text"
        >
          arrow-right
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-arrow-skip"
        />
         
        <span
          class="docs__icons-text"
        >
          arrow-skip
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-arrow-up"
        />
         
        <span
          class="docs__icons-text"
        >
          arrow-up
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-audience"
        />
         
        <span
          class="docs__icons-text"
        >
          audience
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-billing"
        />
         
        <span
          class="docs__icons-text"
        >
          billing
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-breadcrumb"
        />
         
        <span
          class="docs__icons-text"
        >
          breadcrumb
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-budget"
        />
         
        <span
          class="docs__icons-text"
        >
          budget
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-burger"
        />
         
        <span
          class="docs__icons-text"
        >
          burger
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-caret-down"
        />
         
        <span
          class="docs__icons-text"
        >
          caret-down
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-caret-up"
        />
         
        <span
          class="docs__icons-text"
        >
          caret-up
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-code"
        />
         
        <span
          class="docs__icons-text"
        >
          code
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-dashboard"
        />
         
        <span
          class="docs__icons-text"
        >
          dashboard
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-desktop"
        />
         
        <span
          class="docs__icons-text"
        >
          desktop
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-editor"
        />
         
        <span
          class="docs__icons-text"
        >
          editor
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-events"
        />
         
        <span
          class="docs__icons-text"
        >
          events
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-external"
        />
         
        <span
          class="docs__icons-text"
        >
          external
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-heart"
        />
         
        <span
          class="docs__icons-text"
        >
          heart
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-launch"
        />
         
        <span
          class="docs__icons-text"
        >
          launch
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-lock"
        />
         
        <span
          class="docs__icons-text"
        >
          lock
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-mobile"
        />
         
        <span
          class="docs__icons-text"
        >
          mobile
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-plan"
        />
         
        <span
          class="docs__icons-text"
        >
          plan
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-plus"
        />
         
        <span
          class="docs__icons-text"
        >
          plus
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-profile"
        />
         
        <span
          class="docs__icons-text"
        >
          profile
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-refresh"
        />
         
        <span
          class="docs__icons-text"
        >
          refresh
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-remove"
        />
         
        <span
          class="docs__icons-text"
        >
          remove
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-rules"
        />
         
        <span
          class="docs__icons-text"
        >
          rules
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-settings"
        />
         
        <span
          class="docs__icons-text"
        >
          settings
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-target"
        />
         
        <span
          class="docs__icons-text"
        >
          target
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-team"
        />
         
        <span
          class="docs__icons-text"
        >
          team
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-theme"
        />
         
        <span
          class="docs__icons-text"
        >
          theme
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-tick"
        />
         
        <span
          class="docs__icons-text"
        >
          tick
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-x"
        />
         
        <span
          class="docs__icons-text"
        >
          x
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-integrations"
        />
         
        <span
          class="docs__icons-text"
        >
          integrations
        </span>
      </div>
      <div
        class="docs__icons-item"
      >
        <span
          class="icon-more"
        />
         
        <span
          class="docs__icons-text"
        >
          more
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Global|Icon Tryout 1`] = `
<div
  class="p-4"
>
  <span
    class="icon-arrow-down color-secondary"
  />
</div>
`;
